# OpenGit

./: .gitattributes  .gitignore  Cargo.toml  docker-compose.yml
OpenGitBackend/: Cargo.toml
OpenGitBackend/data/repos/repos/fb2c5dcd-68fe-46c9-8206-8fa1860dca17/test-repo.git/: config
OpenGitBackend/data/repos/repos/fb2c5dcd-68fe-46c9-8206-8fa1860dca17/test-repo.git/refs/heads/: main
OpenGitBackend/migrations/: 0001_users.sql  0002_auth.sql  0003_organizations.sql  0004_repositories.sql  0005_git_metadata.sql  0006_issues.sql  0007_pull_requests.sql  0008_labels_milestones.sql  0009_releases.sql  0010_ci.sql  0011_discussions.sql  0012_packages.sql  0013_wiki.sql  0014_notifications.sql  0015_webhooks.sql  0016_projects.sql  0017_gists.sql  0018_security.sql  0019_admin.sql  0020_pages.sql  0022_workflow_steps_unique.sql  0023_backup_codes.sql  0024_oauth_codes.sql
OpenGitBackend/src/: config.rs  error.rs  main.rs  state.rs
OpenGitBackend/src/api/: mod.rs  router.rs
OpenGitBackend/src/api/middleware/: auth.rs
OpenGitBackend/src/api/routes/: admin.rs  auth.rs  ci.rs  git_browser.rs  git_http.rs  health.rs  issues.rs  mod.rs  notifications.rs  oauth.rs  organizations.rs  pull_requests.rs  releases.rs  repos.rs  search.rs  two_factor.rs  users.rs  webhooks.rs
OpenGitBackend/src/db/: mod.rs  postgres.rs
OpenGitBackend/src/db/queries/: mod.rs  repos.rs  tokens.rs  users.rs
OpenGitBackend/src/git/: mod.rs  pack.rs  repository.rs
OpenGitBackend/src/git/ssh/: server.rs
OpenGitBackend/src/models/: admin.rs  auth.rs  ci.rs  discussion.rs  enums.rs  gist.rs  git.rs  issue.rs  mod.rs  notification.rs  organization.rs  package.rs  pages.rs  project.rs  pull_request.rs  release.rs  repo.rs  security.rs  user.rs  webhook.rs  wiki.rs
OpenGitBackend/src/search/: indexer.rs
OpenGitBackend/src/services/: auth.rs  mod.rs  webhook.rs
OpenGitWeb/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
OpenGitWeb/src/: App.tsx  index.css  main.tsx
OpenGitWeb/src/api/: auth.ts  ci.ts  client.ts  issues.ts  notifications.ts  orgs.ts  pulls.ts  repos.ts  search.ts  users.ts
OpenGitWeb/src/components/: ErrorBoundary.tsx
OpenGitWeb/src/components/layout/: Header.tsx  PageLayout.tsx
OpenGitWeb/src/components/ui/: Alert.tsx  Avatar.tsx  Badge.tsx  Button.tsx  Input.tsx  Spinner.tsx  Tabs.tsx  Toast.tsx
OpenGitWeb/src/hooks/: useAuth.ts  useDebounce.ts  usePagination.ts
OpenGitWeb/src/lib/: constants.ts  utils.ts
OpenGitWeb/src/pages/: LandingPage.tsx  NotFoundPage.tsx
OpenGitWeb/src/pages/admin/: AdminPage.tsx
OpenGitWeb/src/pages/auth/: LoginPage.tsx  RegisterPage.tsx
OpenGitWeb/src/pages/explore/: ExplorePage.tsx
OpenGitWeb/src/pages/notifications/: NotificationsPage.tsx
OpenGitWeb/src/pages/org/: OrgPage.tsx
OpenGitWeb/src/pages/repo/: CommitDetailPage.tsx  CommitHistoryPage.tsx  CreatePrPage.tsx  FileViewerPage.tsx  IssuePage.tsx  NewRepoPage.tsx  PullRequestPage.tsx  RepoActionsPage.tsx  RepoHomePage.tsx  RepoIssuesPage.tsx  RepoLayout.tsx  RepoReleasesPage.tsx  RepoSettingsPage.tsx
OpenGitWeb/src/pages/search/: SearchPage.tsx
OpenGitWeb/src/pages/settings/: SettingsPage.tsx
OpenGitWeb/src/pages/user/: ProfilePage.tsx
OpenGitWeb/src/stores/: auth.ts  ui.ts
OpenGitWeb/src/types/: auth.ts  issue.ts  pull.ts  repo.ts  user.ts
