[package]
name = "OpenGitBackend"
version = "0.1.0"
edition = "2024"

[dependencies]

# Async runtime
tokio            = { version = "1.52.3",    features = ["full"] }

# HTTP server
axum             = { version = "0.8.9",  features = ["multipart", "ws"] }
tower            = "0.5.3"
tower-http       = { version = "0.6.10",  features = ["cors", "trace", "compression-gzip"] }

# gRPC
tonic            = "0.14.6"
prost            = "0.14.3"

# WebSockets
tokio-tungstenite = "0.29.0"

# PostgreSQL
sqlx             = { version = "0.8.6",  features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "macros"] }

# Valkey / Redis
fred             = { version = "10.1.0",    features = ["tokio-native-tls"] }

# Background jobs
apalis           = { version = "0.7.4" }
apalis-redis     = { version = "0.7" }

# Git operations
gix              = "0.83.0"   # gitoxide — primary
git2             = "0.20.4"   # libgit2 bindings — fallback

# SSH server
russh            = "0.60.3"
russh-keys       = "0.49.2"

# S3 / MinIO
aws-sdk-s3       = "1.119.0"
aws-config       = "1.8.16"

# Search
meilisearch-sdk  = "0.33.0"

# ── Email
lettre           = { version = "0.11.22", features = ["tokio1", "tokio1-native-tls"] }

# Auth & security
jsonwebtoken     = "10.4.0"
argon2           = "0.5.3"
blake3           = "1.8.5"

# Serialization
serde            = { version = "1.0.228",    features = ["derive"] }
serde_json       = "1.0.149"

# Error handling
thiserror        = "2.0.18"
anyhow           = "1.0.102"

# Tracing / logging
tracing               = "0.1.44"
tracing-subscriber    = { version = "0.3.23", features = ["json", "env-filter"] }

# Config
config           = "0.15.23"

# Utilities
uuid             = { version = "1.23.1",    features = ["v4", "serde"] }
chrono           = { version = "0.4.44",  features = ["serde"] }
reqwest          = { version = "0.13.3", features = ["json", "rustls"] }

[build-dependencies]
tonic-build      = "0.14.6"