[package]
name = "OpenGitBackend"
version = "0.1.0"
edition = "2024"

[dependencies]

# Async runtime
tokio            = { version = "1",    features = ["full"] }

# HTTP server
axum = { version = "0.8", features = ["multipart", "ws", "macros"] }
tower            = "0.5"
tower-http       = { version = "0.6",  features = ["cors", "trace", "compression-gzip"] }

# gRPC
tonic            = "0.14"
prost            = "0.14"

hmac   = "0.12.1"
sha2   = "0.10.8"
hex    = "0.4.3"

totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
urlencoding = "2"

# WebSockets
tokio-tungstenite = "0.29"

# PostgreSQL
sqlx             = { version = "0.8",  features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "macros"] }

# Valkey / Redis
redis            = { version = "1.2.1", features = ["tokio-comp", "connection-manager"] }

# Background jobs
apalis           = { version = "0.7" }
apalis-redis     = { version = "0.7" }

# Git operations
gix              = "0.83"
git2             = "0.20"

# SSH server
russh            = "0.44"
russh-keys       = "0.44"

# S3 / MinIO
aws-sdk-s3       = "1"
aws-config       = "1"

# Search
meilisearch-sdk  = "0.33"

# Email
lettre           = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }

# Auth & security
jsonwebtoken     = "9"
argon2           = "0.5"
blake3           = "1"

# Serialization
serde            = { version = "1",    features = ["derive"] }
serde_json       = "1"

# Error handling
thiserror        = "2"
anyhow           = "1"

# Tracing / logging
tracing               = "0.1"
tracing-subscriber    = { version = "0.3", features = ["json", "env-filter"] }

# Config
config           = "0.15"

# Utilities
uuid             = { version = "1",    features = ["v4", "serde"] }
chrono           = { version = "0.4",  features = ["serde"] }
reqwest          = { version = "0.12", features = ["json", "rustls-tls"] }
dotenvy          = "0.15"
async-trait = "0.1.89"

[build-dependencies]
tonic-build      = "0.14"